--- a/ModifyVehicleLocationWindow.xaml
+++ b/ModifyVehicleLocationWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CMSLDF.ModifyVehicleWindow"
+﻿<Window x:Class="CMSLDF.ModifyVehicleLocationWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -47,7 +47,7 @@
                  TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
 
         <!-- Image URL/Path -->
-        <Label Content="Image:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,10,5"/>
+        <Label Content="Image (Aperçu car pas encore implémenté):" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,10,5"/>
         <Grid Grid.Row="3" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -68,8 +68,8 @@
 
         <!-- Buttons -->
         <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,15,0,0">
-            <Button x:Name="SaveButton" Content="Save" Width="80" Margin="0,0,10,0" Click="SaveButton_Click"/>
-            <Button x:Name="CancelButton" Content="Cancel" Width="80" IsCancel="True"/>
+            <Button x:Name="SaveButton" Content="Sauvegarder" Width="80" Margin="0,0,10,0" Click="SaveButton_Click"/>
+            <Button x:Name="CancelButton" Content="Annuler" Width="80" IsCancel="True"/>
         </StackPanel>
 
     </Grid>
